Finish Chapter 1, 2.1. Start rewrite 2.2

--- a/tex/graphics/2-srvX.tex
+++ b/tex/graphics/2-srvX.tex
@@ -1,4 +1,4 @@
-% Created by tikzDevice version 0.12.3.1 on 2021-11-16 08:52:25
+% Created by tikzDevice version 0.12.3.1 on 2021-11-16 08:52:36
 % !TEX encoding = UTF-8 Unicode
 \begin{tikzpicture}[x=1pt,y=1pt]
 \definecolor{fillColor}{RGB}{255,255,255}
@@ -17,17 +17,17 @@
 \path[fill=fillColor] ( 20.71, 30.69) rectangle (211.31, 95.68);
 \definecolor{drawColor}{gray}{0.92}
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71, 42.08) --
-	(211.31, 42.08);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71, 41.03) --
+	(211.31, 41.03);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71, 56.15) --
-	(211.31, 56.15);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71, 55.80) --
+	(211.31, 55.80);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71, 70.22) --
-	(211.31, 70.22);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71, 70.57) --
+	(211.31, 70.57);
 
-\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71, 84.28) --
-	(211.31, 84.28);
+\path[draw=drawColor,line width= 0.3pt,line join=round] ( 20.71, 85.34) --
+	(211.31, 85.34);
 
 \path[draw=drawColor,line width= 0.3pt,line join=round] ( 51.04, 30.69) --
 	( 51.04, 95.68);
@@ -41,20 +41,20 @@
 \path[draw=drawColor,line width= 0.3pt,line join=round] (180.99, 30.69) --
 	(180.99, 95.68);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 35.05) --
-	(211.31, 35.05);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 33.64) --
+	(211.31, 33.64);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 49.11) --
-	(211.31, 49.11);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 48.41) --
+	(211.31, 48.41);
 
 \path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 63.18) --
 	(211.31, 63.18);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 77.25) --
-	(211.31, 77.25);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 77.95) --
+	(211.31, 77.95);
 
-\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 91.32) --
-	(211.31, 91.32);
+\path[draw=drawColor,line width= 0.6pt,line join=round] ( 20.71, 92.72) --
+	(211.31, 92.72);
 
 \path[draw=drawColor,line width= 0.6pt,line join=round] ( 29.38, 30.69) --
 	( 29.38, 95.68);
@@ -72,108 +72,107 @@
 	(202.65, 95.68);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\path[draw=drawColor,line width= 1.1pt,line join=round] ( 29.38, 52.12) --
-	( 31.09, 53.70) --
-	( 32.81, 55.21) --
-	( 34.52, 56.64) --
-	( 36.24, 58.01) --
-	( 37.96, 59.31) --
-	( 39.67, 60.54) --
-	( 41.39, 61.72) --
-	( 43.10, 62.84) --
-	( 44.82, 63.90) --
-	( 46.53, 64.95) --
-	( 48.25, 66.00) --
-	( 49.96, 67.05) --
-	( 51.68, 68.11) --
-	( 53.40, 69.17) --
-	( 55.11, 70.24) --
-	( 56.83, 71.31) --
-	( 58.54, 72.40) --
-	( 60.26, 73.46) --
-	( 61.97, 74.42) --
-	( 63.69, 75.28) --
-	( 65.40, 76.07) --
-	( 67.12, 76.78) --
-	( 68.84, 77.42) --
-	( 70.55, 77.99) --
-	( 72.27, 78.50) --
-	( 73.98, 78.93) --
-	( 75.70, 79.17) --
-	( 77.41, 79.22) --
-	( 79.13, 79.12) --
-	( 80.84, 78.86) --
-	( 82.56, 78.44) --
-	( 84.27, 77.84) --
-	( 85.99, 77.03) --
-	( 87.71, 75.96) --
-	( 89.42, 74.78) --
-	( 91.14, 73.56) --
-	( 92.85, 72.30) --
-	( 94.57, 71.00) --
-	( 96.28, 69.64) --
-	( 98.00, 68.22) --
-	( 99.71, 66.73) --
-	(101.43, 65.17) --
-	(103.15, 63.59) --
-	(104.86, 62.13) --
-	(106.58, 60.80) --
-	(108.29, 59.59) --
-	(110.01, 58.48) --
-	(111.72, 57.48) --
-	(113.44, 56.58) --
-	(115.15, 55.76) --
-	(116.87, 55.04) --
-	(118.59, 54.58) --
-	(120.30, 54.33) --
-	(122.02, 54.22) --
-	(123.73, 54.19) --
-	(125.45, 54.19) --
-	(127.16, 54.23) --
-	(128.88, 54.37) --
-	(130.59, 54.67) --
-	(132.31, 55.10) --
-	(134.03, 55.64) --
-	(135.74, 56.29) --
-	(137.46, 57.08) --
-	(139.17, 58.00) --
-	(140.89, 59.09) --
-	(142.60, 60.34) --
-	(144.32, 61.78) --
-	(146.03, 63.26) --
-	(147.75, 64.51) --
-	(149.47, 65.57) --
-	(151.18, 66.44) --
-	(152.90, 67.14) --
-	(154.61, 67.70) --
-	(156.33, 68.13) --
-	(158.04, 68.42) --
-	(159.76, 68.60) --
-	(161.47, 68.59) --
-	(163.19, 68.44) --
-	(164.90, 68.15) --
-	(166.62, 67.71) --
-	(168.34, 67.09) --
-	(170.05, 66.24) --
-	(171.77, 65.11) --
-	(173.48, 63.62) --
-	(175.20, 62.03) --
-	(176.91, 60.51) --
-	(178.63, 59.04) --
-	(180.34, 57.62) --
-	(182.06, 56.24) --
-	(183.78, 54.90) --
-	(185.49, 53.59) --
-	(187.21, 52.29) --
-	(188.92, 51.02) --
-	(190.64, 49.77) --
-	(192.35, 48.54) --
-	(194.07, 47.33) --
-	(195.78, 46.14) --
-	(197.50, 44.97) --
-	(199.22, 43.82) --
-	(200.93, 42.68) --
-	(202.65, 42.68);
+\path[draw=drawColor,line width= 1.1pt,line join=round] ( 29.38, 94.59) --
+	( 31.09, 93.87) --
+	( 32.81, 93.15) --
+	( 34.52, 92.43) --
+	( 36.24, 91.70) --
+	( 37.96, 90.98) --
+	( 39.67, 90.26) --
+	( 41.39, 89.54) --
+	( 43.10, 88.81) --
+	( 44.82, 88.49) --
+	( 46.53, 88.37) --
+	( 48.25, 88.25) --
+	( 49.96, 88.13) --
+	( 51.68, 88.00) --
+	( 53.40, 87.88) --
+	( 55.11, 87.76) --
+	( 56.83, 87.64) --
+	( 58.54, 86.96) --
+	( 60.26, 85.15) --
+	( 61.97, 83.35) --
+	( 63.69, 81.55) --
+	( 65.40, 79.75) --
+	( 67.12, 77.94) --
+	( 68.84, 76.14) --
+	( 70.55, 74.34) --
+	( 72.27, 72.53) --
+	( 73.98, 68.54) --
+	( 75.70, 64.54) --
+	( 77.41, 60.55) --
+	( 79.13, 56.55) --
+	( 80.84, 52.56) --
+	( 82.56, 48.56) --
+	( 84.27, 44.57) --
+	( 85.99, 40.57) --
+	( 87.71, 38.61) --
+	( 89.42, 37.66) --
+	( 91.14, 36.71) --
+	( 92.85, 35.77) --
+	( 94.57, 34.82) --
+	( 96.28, 33.88) --
+	( 98.00, 32.93) --
+	( 99.71, 31.98) --
+	(101.43, 31.77) --
+	(103.15, 33.05) --
+	(104.86, 34.32) --
+	(106.58, 35.59) --
+	(108.29, 36.86) --
+	(110.01, 38.13) --
+	(111.72, 39.41) --
+	(113.44, 40.68) --
+	(115.15, 41.95) --
+	(116.87, 46.25) --
+	(118.59, 50.56) --
+	(120.30, 54.86) --
+	(122.02, 59.17) --
+	(123.73, 63.47) --
+	(125.45, 67.78) --
+	(127.16, 72.08) --
+	(128.88, 76.39) --
+	(130.59, 78.92) --
+	(132.31, 80.55) --
+	(134.03, 82.19) --
+	(135.74, 83.83) --
+	(137.46, 85.47) --
+	(139.17, 87.10) --
+	(140.89, 88.74) --
+	(142.60, 90.38) --
+	(144.32, 90.50) --
+	(146.03, 87.60) --
+	(147.75, 84.70) --
+	(149.47, 81.81) --
+	(151.18, 78.91) --
+	(152.90, 76.01) --
+	(154.61, 73.11) --
+	(156.33, 70.21) --
+	(158.04, 67.31) --
+	(159.76, 63.02) --
+	(161.47, 58.72) --
+	(163.19, 54.43) --
+	(164.90, 50.14) --
+	(166.62, 45.84) --
+	(168.34, 41.55) --
+	(170.05, 37.26) --
+	(171.77, 32.96) --
+	(173.48, 31.86) --
+	(175.20, 32.36) --
+	(176.91, 32.86) --
+	(178.63, 33.36) --
+	(180.34, 33.86) --
+	(182.06, 34.35) --
+	(183.78, 34.85) --
+	(185.49, 35.35) --
+	(187.21, 35.80) --
+	(188.92, 36.14) --
+	(190.64, 36.49) --
+	(192.35, 36.83) --
+	(194.07, 37.18) --
+	(195.78, 37.52) --
+	(197.50, 37.87) --
+	(199.22, 38.21) --
+	(200.93, 63.18);
 \definecolor{drawColor}{gray}{0.20}
 
 \path[draw=drawColor,line width= 0.6pt,line join=round,line cap=round] ( 20.71, 30.69) rectangle (211.31, 95.68);
@@ -221,6 +220,6 @@
 \path[clip] (  0.00,  0.00) rectangle (216.81,101.18);
 \definecolor{drawColor}{RGB}{0,0,0}
 
-\node[text=drawColor,rotate= 90.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 13.08, 63.18) {$\Re(\beta)$};
+\node[text=drawColor,rotate= 90.00,anchor=base,inner sep=0pt, outer sep=0pt, scale=  1.10] at ( 13.08, 63.18) {$\Re(q)$};
 \end{scope}
 \end{tikzpicture}
