--- a/tex/sections/4-application.tex
+++ b/tex/sections/4-application.tex
@@ -1,3 +1,10 @@
+\label{sec:4}
+
 \section{Mean Estimation for Simulated Spirals}
+\label{sec:4-spirals}
+
 \section{Classification of Hand-written Digits}
+\label{sec:4-digits}
+
 \section{Mean Differences of Tounge Shapes in a Phonetics Study}
+\label{sec:4-tounges}
