--- a/tex/sections/1-intro.tex
+++ b/tex/sections/1-intro.tex
@@ -1,3 +1,4 @@
+\label{sec:1}
 Statistical Shape Analysis \parencite[see e.g.][]{DrydenMardia2016} is the branch of statistics concerned with modelling geometrical information.
 Such information might come in the form of outlines of bones or organs in a medical image, traced points along a handwritten digit, or data on the folding structure of a protein.
 This data is commonly captured using \emph{landmarks}, which are characteristic points on the objects of interest that \textquote[{\parencite[3]{DrydenMardia2016}}]{match between and within populations}.
@@ -13,7 +14,7 @@ As each object then corresponds to one observation, this opens up a connection t
 
 When analyzing the geometry of objects, differences in location, rotation, and size are often not of interest.
 Instead, the focus lies purely on their differences in  \textit{shape}, a widely adapted definition of which was established by \cite{Kendall1977} and which might be formulated in the following way: \textquote[{\parencite[1]{DrydenMardia2016}}]{\textins*{A}ll the geometrical information that remains when location, scale and rotational effects are removed from an object}.
-This is illustrated in Figure \ref{fig:1-eucl}, where the same shape of a handwritten digit \enquote{3} is plotted in three different orientations and sizes.
+This is illustrated in Figure \ref{fig:1-eucl}, where the same shape of a handwritten digit \enquote*{3} is plotted in three different orientations and sizes.
 \begin{figure}
   \centering
   \begin{subfigure}{.48\textwidth}
@@ -28,11 +29,11 @@ This is illustrated in Figure \ref{fig:1-eucl}, where the same shape of a handwr
     \caption{Original (left) and re-parameterized digit (right; $t \mapsto t^5$). Color indicates the value of the parametrization $t \in [0,1]$ at point $\beta(t)$.}
     \label{fig:1-warp}
   \end{subfigure}
-  \caption{Several representations of the same shape. Data:\ \texttt{digits3.dat} from the \texttt{shapes} package \parencite{shapes} for the \texttt{R} programming language \parencite{R} with smoothing applied using methods discussed in Appendix \ref{app:smooth}. Original dataset collected by \cite{Anderson1997}.}
+  \caption{Several representations of the same shape. Data:\ \texttt{digits3.dat} from the \texttt{shapes} package \parencite{shapes} for the \texttt{R} programming language \parencite{R} with smoothing applied using methods discussed in Appendix \ref{app:a-smooth}. Original dataset collected by \cite{Anderson1997}.}
   \label{fig:1-shape}
 \end{figure}
-When considering the shape of a curve $\beta : [0,1] \rightarrow \mathbb{R}^d$, one has to additionally take into account effects relating to re-parametrisation.
-As illustrated in Figure \ref{fig:1-warp}, curves $\beta(t)$ and $\beta(\gamma(t))$, with some re-parametrisation or \textit{warping function} $\gamma : [0,1] \rightarrow [0,1]$ monotonically increasing and differentiable, have the same image and therefore represent the same shape as well.
+When considering the shape of a curve $\beta : [0,1] \rightarrow \mathbb{R}^d$, one has to additionally take into account effects relating to the parametrization $t \in [0,1]$.
+As illustrated in Figure \ref{fig:1-warp}, curves $\beta(t)$ and $\beta(\gamma(t))$, with some re-parametrization or \textit{warping function} $\gamma : [0,1] \rightarrow [0,1]$ monotonically increasing and differentiable, have the same image and therefore represent the same shape as well.
 
 A pre-requisite for any statistical analysis of shape is the ability to calculate a distance between and to estimate a mean from observations, in a fashion that does not depend on location, rotation, scale and/or parametrization of the input.
 In this thesis two established approaches to shape analysis will be combined:
@@ -41,23 +42,23 @@ Secondly, \cite{SrivastavaEtAl2011} introduced a mathematical framework for the 
 Taken together, both approaches allow for analysing curves in a fashion that is invariant to all four shape-preserving transformations, leading to an \emph{elastic full Procrustes distance} and \emph{mean}.
 As the full Procrustes mean has particularly nice properties in two dimensions, when identifying $\mathbb{R}^2$ with $\mathbb{C}$ \parencite[see][Chap.\ 8]{DrydenMardia2016}, this thesis will be restricted to the case of planar curves.
 
-While we are interested in modeling a (planar) object's geometrical information as a continous curve $\beta : [0,1] \rightarrow \mathbb{R}^2$, the curve itself is usually only observed as a discrete set of points $\beta(t_1), \beta(t_2), \dots, \beta(t_m)$.
-As shown on the left side of Figure \ref{fig:1-sparse} this is no problem when the number of observed points $m$ is high and the whole length of the curve is densly observed, as we can easily interpolate any value $\beta(t)$ for $t \in [0,1]$.
+While we are interested in modelling a (planar) object's geometrical information as a continous curve $\beta : [0,1] \rightarrow \mathbb{R}^2$, the curve itself is usually only observed as a discrete set of points $\beta(t_1), \beta(t_2), \dots, \beta(t_m)$.
+As shown on the left side of Figure \ref{fig:1-sparse} this is no problem when the number $m$ of observed points is high and the whole length of the curve is densly observed, as we can easily interpolate $\beta(t)$ for any $t \in [0,1]$.
 \begin{figure}
   \centering
   \begin{subfigure}{.48\textwidth}
     \centering
-    \inputTikz{1-sparse}
+    \inputTikz{1-dense}
   \end{subfigure}\hfill%
   \begin{subfigure}{.48\textwidth}
     \centering
-    \inputTikz{1-dense}
+    \inputTikz{1-sparse}
   \end{subfigure}
-  \caption{Sparse (left) and dense (right) observations of the same three digits. Data: see Figure \ref{fig:1-shape}.}
+  \caption{Dense (left) and sparse (right) observations of the same three digits. Data: see Figure \ref{fig:1-shape}, with the smooth curves sampled on a dense (left) and sparse (right) grid.}
   \label{fig:1-sparse}
 \end{figure}
 However, in cases where $\beta$ is only observed over a small number of points (right side) and where the density and position of observed points may even vary between different curves---a setting known as \emph{sparse} and \emph{irregular}---more sophisticated smoothing techniques have to be applied.
-While the SRV framework has been combined with a Procrustes distance before, to estimate elastic shape means that also include invariance under scaling, rotation and translation \parencite[see][]{SrivastavaEtAl2011}, these approaches have mostly focused on \enquote{Riemannian} or \enquote{geodesic} mean concepts and are not specially designed with sparse or irregular observations in mind.
+While the SRV framework has been combined with a Procrustes distance before, to estimate elastic shape means that also include invariance under scaling, rotation and translation \parencite[see][]{SrivastavaEtAl2011}, these approaches have mostly focused on \emph{Riemannian} or \emph{geodesic} mean concepts and are not specially designed with sparse or irregular observations in mind.
 On the other hand, as will be shown, the estimation of the \emph{elastic full Procrustes mean} in two dimensions is related to an eigenfunction problem over the complex covariance surface of the observed curves.
 This offers an advantage, as we can then make use of established smoothing techniques for the estimation of covariance surfaces in the sparse and irregular setting.
 Here, in particular \cite{CederbaumScheiplGreven2018} offers a method for efficient covariance smoothing using \emph{tensor product p-splines} \parencite[see e.g.][Chap. 8.2]{FahrmeierEtAl2013}.
@@ -73,18 +74,18 @@ The aim of this thesis, as illustrated in Figure \ref{fig:1-mean}, is to extend 
     \centering
     \inputTikz{1-mean}
   \end{subfigure}
-  \caption{Elastic full Procrustes mean function (right) estimated from sparse and irregular observations (left) using 13 knots and linear p-splines with a 2nd order penalty on SRV level. Data: \texttt{digits3.dat} with additional random rotation, scaling and translation applied.}
+  \caption{Elastic full Procrustes mean function (right) estimated from sparse and irregular observations (left) using 13 knots and linear p-splines with a 2nd order penalty on SRV level. Data: Original (un-smoothed) \texttt{digits3.dat} with additional random rotation, scaling and translation applied.}
   \label{fig:1-mean}
 \end{figure}
 The later will be achieved by generalizing the concept of the full Procrustes mean from landmark to functional data and by iteratively applying full Procrustes mean estimation, rotation-alignment and parametrization-alignment, leading to the estimation of elastic full Procrustes means.
-Here, smoothing techniques for sparse estimation of the complex covariance surfaces as available in the \texttt{R} package \texttt{sparseFLMM} \parencite{sparseFLMM} will be used.
+Here, techniques for hermitian smoothing of the complex covariance surfaces as available in the \texttt{R} package \texttt{sparseFLMM} \parencite{sparseFLMM} will be used.
 
 
 The thesis is organized as follows.
-In Section \ref{sec:theo} relevant background material is reviewed and the elastic full Procrustes mean is derived, in the case where curves $\beta:[0,1] \rightarrow \mathbb{R}^2$ are fully observed. 
-Then, in Section \ref{sec:est}, an estimation procedure for the setting of sparse and irregularly observed curves $\beta(t_1), \dots, \beta(t_m)$ is proposed, concluding the theoretical part of this thesis.
-In Section \ref{sec:app} the proposed method will be verified and applied using simulated and empirical datasets.
-Finally, all results will be summarized in Section \ref{sec:sum}.
-Appendix \ref{app:app} and Supplements \ref{app:sup} offer additional considerations and some reproducability guidelines.
+In Section \ref{sec:2} relevant background material is reviewed and the elastic full Procrustes mean is derived, in the case where curves $\beta:[0,1] \rightarrow \mathbb{R}^2$ are fully observed. 
+In Section \ref{sec:3} an estimation procedure for the setting of sparse and irregularly observed curves $\beta(t_1), \dots, \beta(t_m)$ is proposed, concluding the theoretical part of this thesis.
+In Section \ref{sec:4} the proposed methods will be verified and applied using simulated and empirical datasets.
+Finally, all results will be summarized in Section \ref{sec:5}.
+Appendix \ref{app:a} and Supplements \ref{app:b} offer additional considerations and some reproducability guidelines.
 
 \newpage
